--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage":"https://Hidoreen.github.io/CRUD_App",
   "name": "crud_app",
   "version": "1.0.0",
   "description": "A To-do App that allows user to create, read, update and delete",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy":"npm run build",
+    "deploy": "gp-pages -d build",
     "build": "webpack"
   },
   "keywords": [],
