--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy":"npm run build",
-    "deploy": "gp-pages -d build",
+    "deploy": "gh-pages -d build",
     "build": "webpack"
   },
   "keywords": [],
