--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "homepage":"https://Hidoreen.github.io/CRUD_App",
   "name": "crud_app",
   "version": "1.0.0",
   "description": "A To-do App that allows user to create, read, update and delete",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "predeploy":"npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "build": "webpack"
   },
   "keywords": [],
@@ -15,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "webpack": "^5.90.1",
